test_suite/alan-2022-examples/failing/000340_mutation.alan
source s begin, integer P9; relax end
